<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login_rego"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_caption"
        app:srcCompat="@drawable/subcaption" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCaption"
        app:srcCompat="@drawable/bizexpertlogo"
        android:contentDescription="@string/logo_image" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginTop="33dp"
        android:text="@string/txtLogin"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogin">

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:text="@string/txtEmail"

            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/inputEmail_login"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/txtEmail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="#FFFFFF" />

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/txtPassword"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/inputPassword_login"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/txtPassword"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="#FFFFFF">

        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btnForLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/txtLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/txtForRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/txtRegister"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnForLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>