<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <RelativeLayout
      android:id="@+id/export_Info_layout1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp">

    <!--Srcs, and texts (All status of exports will be updated based on the database-->
    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/default_profile_img" />

    <LinearLayout
        android:id="@+id/export_Info_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/img_profile"
        android:orientation="vertical">

      <ImageView
          android:id="@+id/online_img"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:scaleType="fitXY"
          android:src="@drawable/ic_status_online">

      </ImageView>

      <TextView
          android:id="@+id/txt_jobTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/job_title"
          android:textSize="18sp" />

      <TextView
          android:id="@+id/txt_expertName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/name"
          android:textSize="25sp"
          android:textColor="@color/black"
          android:textStyle="bold" />

    </LinearLayout>


  </RelativeLayout>

  <RelativeLayout
      android:id="@+id/export_Info_Layout2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:orientation="horizontal">


    <ImageView
        android:id="@+id/ic_star"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_toStartOf="@+id/ic_reviews"
        app:srcCompat="@drawable/ic_star" />

    <ImageView
        android:id="@+id/ic_reviews"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/ic_message" />

    <ImageView
        android:id="@+id/ic_accounts"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_toEndOf="@+id/ic_reviews"
        app:srcCompat="@drawable/ic_accounts" />

    <TextView
        android:id="@+id/num_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ic_star"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="80dp"
        android:layout_toStartOf="@+id/num_review"
        android:text="4.5/5"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/num_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ic_reviews"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="3425"
        android:textColor="@color/black"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/num_clients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ic_accounts"
        android:layout_marginStart="79dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/num_review"
        android:text="4109"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/txt_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/num_rate"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="72dp"
        android:layout_toStartOf="@+id/txt_review"
        android:text="Rate"
        android:textAlignment="center">

    </TextView>

    <TextView
        android:id="@+id/txt_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/num_review"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="Reviews">

    </TextView>

    <TextView
        android:id="@+id/txt_clients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/num_clients"
        android:layout_marginStart="65dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@+id/txt_review"
        android:text="Clients"
        android:textAlignment="center">

    </TextView>


  </RelativeLayout>

  <View
      android:layout_width="340dp"
      android:layout_height="1dp"
      android:layout_gravity="center"
      android:layout_marginTop="20dp"
      android:background="#B1B1B1" />

  <LinearLayout
      android:id="@+id/export_Info_layout3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/export_Info_Layout2">

    <TextView
        android:id="@+id/txt_availableTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:drawablePadding="10dp"
        android:text="Mon,Tue,Wed,Thur 9:00AM ~ 3:00PM"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        app:drawableLeftCompat="@drawable/ic_calendar"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt_response_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="Respond in '1 Min' On Avreage"
        android:drawablePadding="10dp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:drawableLeftCompat="@drawable/ic_headset" />

    <TextView
        android:id="@+id/txt_availableTrial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="10 Min Free Trial"
        android:drawablePadding="10dp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:drawableLeftCompat="@drawable/ic_medal" />

    <TextView
        android:id="@+id/txt_availableLanguages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="English(Native), Korean"
        android:drawablePadding="10dp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:drawableLeftCompat="@drawable/ic_globe" />


  </LinearLayout>

  <LinearLayout
      android:id="@+id/export_Info_layout4"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:orientation="vertical">

    <ImageButton
        android:id="@+id/btn_career"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_career_title" />

    <ImageButton
        android:id="@+id/btn_recommend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_recommded_clients" />

    <ImageButton
        android:id="@+id/btn_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_review_title" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B1B1B1"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/txt_cost"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:layout_marginTop="10dp"
          android:text="$25"
          android:textColor="@color/black"
          android:textStyle="bold"
          android:textAlignment="center"

          android:textSize="20sp">

      </TextView>

      <TextView
          android:id="@+id/txt_time"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="13dp"
          android:text=" /10 min"
          android:textAlignment="center"
          android:textSize="15sp">

      </TextView>

      <ImageButton
          android:id="@+id/btn_book"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="30dp"
          android:scaleType="centerCrop"
          android:background="@drawable/btn_book_session" />

    </LinearLayout>

  </LinearLayout>


</LinearLayout>